@@ -1,3 +1,4 @@
+220720 add graph-shape statistic
 220719 add auto batch division for vp on very large graphs
 220719 graph sanity check and cmd block fixed
 220719 bug fix, and auto debugging
